{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 197,
  "lineage": "8c7cc5da-d9b9-cb32-8c6c-f2d5702f6ae4",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "sql_node_ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:464262061435:network-interface/eni-06148fa8384d447db",
            "id": "eni-06148fa8384d447db",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:c0:21:da:9b:5b",
            "owner_id": "464262061435",
            "private_dns_name": "ip-10-0-17-97.ap-southeast-1.compute.internal",
            "private_ip": "10.0.17.97",
            "private_ip_list": [
              "10.0.17.97",
              "10.0.28.179",
              "10.0.22.26"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.17.97",
              "10.0.22.26",
              "10.0.28.179"
            ],
            "private_ips_count": 2,
            "security_groups": [
              "sg-079a7531d4dfd5b13",
              "sg-0ac64c42348906510"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fcd4374d52d4faf0",
            "tags": {
              "Name": "sqlnode-tf-sathish",
              "SQLServerName": "sqldbspb9e"
            },
            "tags_all": {
              "Name": "sqlnode-tf-sathish",
              "SQLServerName": "sqldbspb9e",
              "creator": "wlmdb-poc-sathish-terraform"
            }
          },
          "dependencies": [
            "module.ec2.aws_security_group.workload_security_group",
            "module.fsxn.aws_fsx_ontap_file_system.fsx_ontap_fs",
            "module.fsxn.aws_fsx_ontap_storage_virtual_machine.fsxsvm01",
            "module.fsxn.aws_fsx_ontap_volume.fsx_cluster_quorum_volume",
            "module.fsxn.aws_fsx_ontap_volume.fsx_data_volume",
            "module.fsxn.aws_fsx_ontap_volume.fsx_log_volume",
            "module.fsxn.aws_fsx_ontap_volume.fsx_temp_db_volume",
            "module.fsxn.aws_security_group.ontap_security_group",
            "module.vpc-endpoints.aws_security_group.https_security_group",
            "module.vpc-endpoints.aws_vpc_endpoint.cloudformation_endpoint",
            "module.vpc-endpoints.aws_vpc_endpoint.cloudwatch_logs_endpoint",
            "module.vpc-endpoints.aws_vpc_endpoint.ec2_endpoint",
            "module.vpc-endpoints.aws_vpc_endpoint.ec2_messages_endpoint",
            "module.vpc-endpoints.aws_vpc_endpoint.fsx_endpoint",
            "module.vpc-endpoints.aws_vpc_endpoint.s3_endpoint",
            "module.vpc-endpoints.aws_vpc_endpoint.sqs_endpoint",
            "module.vpc-endpoints.aws_vpc_endpoint.ssm_endpoint",
            "module.vpc-endpoints.aws_vpc_endpoint.ssm_messages_endpoint",
            "module.vpc-endpoints.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workload_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:464262061435:security-group/sg-079a7531d4dfd5b13",
            "description": "Allow access to the Workload instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079a7531d4dfd5b13",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.141.68/32"
                ],
                "description": "",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "10.0.141.68/32"
                ],
                "description": "",
                "from_port": 135,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 135
              },
              {
                "cidr_blocks": [
                  "10.0.141.68/32"
                ],
                "description": "",
                "from_port": 3268,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3269
              },
              {
                "cidr_blocks": [
                  "10.0.141.68/32"
                ],
                "description": "",
                "from_port": 389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 389
              },
              {
                "cidr_blocks": [
                  "10.0.141.68/32"
                ],
                "description": "",
                "from_port": 389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 389
              },
              {
                "cidr_blocks": [
                  "10.0.141.68/32"
                ],
                "description": "",
                "from_port": 445,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 445
              },
              {
                "cidr_blocks": [
                  "10.0.141.68/32"
                ],
                "description": "",
                "from_port": 464,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 464
              },
              {
                "cidr_blocks": [
                  "10.0.141.68/32"
                ],
                "description": "",
                "from_port": 464,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 464
              },
              {
                "cidr_blocks": [
                  "10.0.141.68/32"
                ],
                "description": "",
                "from_port": 49152,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.0.141.68/32"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "10.0.141.68/32"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "10.0.141.68/32"
                ],
                "description": "",
                "from_port": 5985,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5985
              },
              {
                "cidr_blocks": [
                  "10.0.141.68/32"
                ],
                "description": "",
                "from_port": 636,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 636
              },
              {
                "cidr_blocks": [
                  "10.0.141.68/32"
                ],
                "description": "",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              },
              {
                "cidr_blocks": [
                  "10.0.141.68/32"
                ],
                "description": "",
                "from_port": 88,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 88
              },
              {
                "cidr_blocks": [
                  "10.0.141.68/32"
                ],
                "description": "",
                "from_port": 9389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9389
              },
              {
                "cidr_blocks": [
                  "202.3.112.0/20"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "workload_security_group",
            "name_prefix": "",
            "owner_id": "464262061435",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "workload_security_group"
            },
            "tags_all": {
              "Name": "workload_security_group",
              "creator": "wlmdb-poc-sathish-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-046f7e26255458373"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fsxn.aws_fsx_ontap_file_system.fsx_ontap_fs",
            "module.fsxn.aws_fsx_ontap_storage_virtual_machine.fsxsvm01",
            "module.fsxn.aws_fsx_ontap_volume.fsx_cluster_quorum_volume",
            "module.fsxn.aws_fsx_ontap_volume.fsx_data_volume",
            "module.fsxn.aws_fsx_ontap_volume.fsx_log_volume",
            "module.fsxn.aws_fsx_ontap_volume.fsx_temp_db_volume",
            "module.fsxn.aws_security_group.ontap_security_group",
            "module.vpc-endpoints.aws_security_group.https_security_group",
            "module.vpc-endpoints.aws_vpc_endpoint.cloudformation_endpoint",
            "module.vpc-endpoints.aws_vpc_endpoint.cloudwatch_logs_endpoint",
            "module.vpc-endpoints.aws_vpc_endpoint.ec2_endpoint",
            "module.vpc-endpoints.aws_vpc_endpoint.ec2_messages_endpoint",
            "module.vpc-endpoints.aws_vpc_endpoint.fsx_endpoint",
            "module.vpc-endpoints.aws_vpc_endpoint.s3_endpoint",
            "module.vpc-endpoints.aws_vpc_endpoint.sqs_endpoint",
            "module.vpc-endpoints.aws_vpc_endpoint.ssm_endpoint",
            "module.vpc-endpoints.aws_vpc_endpoint.ssm_messages_endpoint",
            "module.vpc-endpoints.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.fsxn",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ontap_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:464262061435:security-group/sg-0ac64c42348906510",
            "description": "Allow access to the Workload instances",
            "egress": [],
            "id": "sg-0ac64c42348906510",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 10000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 11104,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11104
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 11105,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11105
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 111,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 111
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 111,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 111
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 135,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 135
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 135,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 135
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 137,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 137
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 139,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 139
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 139,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 139
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 161,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 162
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 161,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 162
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3260,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3260
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 4045,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4045
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 4045,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4045
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 4046,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4046
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 4046,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4046
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 4049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4049
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 635,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 635
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 635,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 635
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 749,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 749
              }
            ],
            "name": "ontap_security_group",
            "name_prefix": "",
            "owner_id": "464262061435",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "creator": "wlmdb-poc-sathish-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-046f7e26255458373"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc-endpoints",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc-endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudformation_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc-endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatch_logs_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc-endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc-endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_messages_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc-endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "fsx_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc-endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc-endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc-endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc-endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_messages_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    }
  ]
}